@@ -1,3 +1,7 @@
+2005-05-13  Mark McLoughlin  <markmc@redhat.com>
+
+	* sabayon.spec.in: update the %files list.
+
 2005-05-12  Mark McLoughlin  <markmc@redhat.com>
 
 	* doc/flat.html: fix invalid html.
